crates/rascal/src/snapshots/rascal__tests__all_samples@random_success.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2/random_success.as
---
initializer:
  actions:
    - ConstantPool:
        - success
        - Success! Hurrah!
        - "Failed :("
        - "-- end --"
    - Push:
        - Constant: 0
        - "True"
    - DefineLocal
    - Push:
        - Integer: 2
    - RandomNumber
    - Push:
        - Integer: 0
    - Equals2
    - Not
    - If: loc0000
    - Push:
        - Constant: 0
        - "False"
    - SetVariable
    - Push:
        - Constant: 0
    - GetVariable
    - Not
    - If: loc0002
    - Push:
        - Constant: 1
    - Trace
    - Jump: loc0001
    - Push:
        - Constant: 2
    - Trace
    - Push:
        - Constant: 3
    - Trace
  label_positions:
    loc0000: 11
    loc0002: 18
    loc0001: 20
extra_modules: []
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
