crates/rascal/src/snapshots/rascal__tests__all_samples@regular_imports.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2/regular_imports.as
---
initializer:
  actions:
    - ConstantPool:
        - flash
        - geom
        - Point
        - display
        - BitmapData
        - myBitmap
        - myPoint
        - createPoint
    - DefineFunction:
        name: createPoint
        params: []
        actions:
          actions:
            - Push:
                - Integer: 5
                - Integer: 5
                - Integer: 2
                - Constant: 0
            - GetVariable
            - Push:
                - Constant: 1
            - GetMember
            - Push:
                - Constant: 2
            - NewMethod
            - Return
          label_positions: {}
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 3
    - GetMember
    - Push:
        - Constant: 4
    - GetMember
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetMember
    - Push:
        - Constant: 2
    - GetMember
    - Trace
    - Push:
        - Constant: 5
        - Integer: 100
        - Integer: 100
        - Integer: 2
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 3
    - GetMember
    - Push:
        - Constant: 4
    - NewMethod
    - DefineLocal
    - Push:
        - Constant: 5
    - GetVariable
    - Trace
    - Push:
        - Constant: 6
        - Integer: 20
        - Integer: 10
        - Integer: 2
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 1
    - GetMember
    - Push:
        - Constant: 2
    - NewMethod
    - DefineLocal
    - Push:
        - Constant: 6
    - GetVariable
    - Trace
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 3
    - GetMember
    - Push:
        - Constant: 4
    - GetMember
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 3
    - GetMember
    - Push:
        - Constant: 4
    - GetMember
    - Equals2
    - Trace
    - Push:
        - Integer: 0
        - Constant: 7
    - CallFunction
    - Trace
  label_positions: {}
extra_modules: []
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
